# Sistemas-Distribuidos-TP-Museo

./: .gitignore  Makefile.am  README.md  configure.ac
TP-FINAL-MUSEO-V1/Debug/: makefile  sources.mk
TP-FINAL-MUSEO-V1/Debug/src/: subdir.mk
TP-FINAL-MUSEO-V1/Debug/src/IPC/: subdir.mk
TP-FINAL-MUSEO-V1/Debug/src/Logger/: subdir.mk
TP-FINAL-MUSEO-V1/Debug/src/Museo/: subdir.mk
TP-FINAL-MUSEO-V1/Debug/src/Utils/: subdir.mk
TP-FINAL-MUSEO-V1/conf/: museo.cfg
TP-FINAL-MUSEO-V1/src/: main_Administrador.cpp  main_Destructor.cpp  main_Lanzador.cpp  main_Persona.cpp  main_Puerta.cpp
TP-FINAL-MUSEO-V1/src/IPC/: Cola.h  FifoEscritura.cpp  Semaforo.cpp  Semaforo.h
TP-FINAL-MUSEO-V1/src/Logger/: Lock.cpp  Logger.cpp  MensajeLog.cpp  MensajeLog.h
TP-FINAL-MUSEO-V1/src/Museo/: Administrador.cpp  Administrador.h  Constantes.h  Destructor.cpp  Destructor.h  Investigador.cpp  Investigador.h  Lanzador.cpp  Lanzador.h  Persona.cpp  Persona.h  PersonaNormal.cpp  PersonaNormal.h  Puerta.cpp  Puerta.h
TP-FINAL-MUSEO-V1/src/Utils/: ParserConfiguracion.h  Utils.cpp  Utils.h
src/: Makefile.am
src/IPC/: Cola.h  MemoriaCompartida.h  SIGINT_Handler.h  Semaforo.cpp  Semaforo.h  SignalHandler.cpp  SignalHandler.h
src/Logger/: Lock.h  Logger.h
src/administrador/: administrador.cpp  administrador_destructor.cpp
src/broker/: .prueba_envio.cpp.swp  ConexionMsg.h  Constantes.h  MensajeGenerico.h  Proceso.h  broadcast.cpp  broadcast_personas.cpp  broker  broker.cpp  broker_entrada  broker_entrada.cpp  broker_salida  broker_salida.cpp  compilar.sh  prueba_envio  prueba_envio.cpp  prueba_get_shmem.cpp  prueba_recep.cpp  server_entrada.cpp  server_salida.cpp  shmem_get.cpp  shmem_return.cpp
src/finalizador-puertas/: ArgParser.cpp  ArgParser.h  main.cpp
src/id-server/: ArgParser.cpp  ArgParser.h  IIdClient.cpp  gen_rpc.sh  id_rango.h  id_server.h  id_server.x  id_server_clnt.c  id_server_impl.cpp  id_server_main.cpp  id_server_svc.c  id_server_xdr.c
src/imuseo/: IMuseo.cpp  IMuseo.h  IMuseoMsg.h
src/imuseo_comp/: imuseo_comp.cpp
src/include/icommon/: resultado.h
src/include/id-server/: IIdClient.h
src/include/imuseo/: IMuseo.h
src/include/ipersona/: IPersona.h  Operacion.h
src/include/ipuerta/: IPuerta.h  IPuertaCli.h  IPuertaServ.h  Operacion.h
src/include/museo/: MuseoMSG.h  MuseoSHM.h
src/ipersona/: IPersona.cpp  IPersonaMsg.h
src/ipersona_comp/: ArgParser.cpp  ArgParser.h  ArgParserLector.cpp  ArgParserLector.h  IPCManager.cpp  IPCManager.h  contador-msg.h  ipc-keys.h  ipersona_comp.cpp  ipersona_comp_lector.cpp
src/ipuerta/: IPuerta.cpp  IPuertaCli.cpp  IPuertaMsg.h  IPuertaServ.cpp
src/ipuerta_comp/: ArgParser.cpp  ArgParser.h  ArgParserLector.h  BrokerMsg.h  ipuerta_comp.cpp  ipuerta_comp_lector.cpp
src/persona/: lanzador.sh  main.cpp  persona_destructor.cpp  persona_lanzador.cpp
src/puerta/: ArgParser.cpp  ArgParser.h  Locker.h  LockerRack.cpp  LockerRack.h  main.cpp
src/sockets/: Makefile  README  cClientProto.cpp  cClientProto.h  cClientSocket.cpp  cClientSocket.h  cDispatcher.cpp  cDispatcher.h  cServerProto.cpp  cServerProto.h  cServerSocket.cpp  cServerSocket.h  cSocket.cpp  cSocket.h  client.cpp  common.cpp  common.h  ops.txt  server.cpp  serverproto.cpp
src/utils/: EnvParam.cpp  EnvParam.h  EnvParams.cpp  EnvParams.h  NonCopyable.h  ParserConfiguracion.cpp  System.cpp  System.h
tests/: Makefile.am
tests/id-server/: main.cpp
tests/ipersona/: main.cpp  mock_comp.cpp
tests/ipuerta/: main.cpp  mock_comp.cpp
tests/sockets/: client.cpp  server.cpp  serverproto.cpp
